h1. CHANGELOG

h2. 2.2.13 October 10, 2012

* add 'change roles' and 'delete user' features to admin app
* improve 'views' recipes so Devise forms use SimpleForm when selected
* improve 'railsapps' recipes to use 'quiet_assets'

h2. 2.2.12 October 6, 2012

* add MiniTest to testing options
* add 'fabrication' gem to fixtures options (contributed by Taylor Mock)
* improve 'extras' recipe to add 'quiet_assets' option

h2. 2.2.11 October 5, 2012

* add optional 'quiet' flag to suppress prompts (contributed by Michael Johnston)
* remove grouped expression warning in ruby 1.9.3 (contributed by Michael Johnston)
* improve 'extras' recipe to allow 'github' preference
* use doublequotes instead of singles for 'git commit' to accommodate Windows (issue 123)
* fix 'gems' recipe to properly rename PostgreSQL databases

h2. 2.2.10 September 30, 2012

* use 'git add -A' instead of 'git add .' (and use '-qm' instead of '-aqm' for git commit)
* add 'email_spec' when RSpec is selected (even when email is 'none')
* enhance 'gems' recipe to prompt for PostgreSQL or MySQL username and password
* fix 'models' recipe to set provider in 'config/initializers/omniauth.rb' (rails-composer issue 19)
* fix 'models' recipe for security fix for OmniAuth (contributed by Bradley Grzesiak)
* fix 'gems' and 'setup' recipes to correct use of google_oauth2 provider for OmniAuth (issue 117)
* fix 'extras' recipe to check for rvm gem version 1.11.3.5 or newer
* update gem 'simple_form' from 2.0.2 to 2.0.3
* update gem 'slim' from 1.3.0 tp 1.3.2
* update gem 'thin' from 1.4.1 tp 1.5.0
* update gem 'jquery-datatables-rails from 1.11.0 to 1.11.1
* update gem 'zurb-foundation' from 3.0.9 to 3.1.1
* update gem 'mongoid' from 3.0.5 to 3.0.6
* update gem 'factory_girl_rails' from 4.0.0 to 4.1.0

h2. 2.2.9 September 10, 2012

* fix 'extras' recipe to improve error reporting when creating a project-specific rvm gemset

h2. 2.2.8 September 7, 2012
